--- a/src/Components/ConcursoList/ConcursoList.module.css
+++ b/src/Components/ConcursoList/ConcursoList.module.css
@@ -1,6 +1,5 @@
 :root {
   --background-gradient-light: linear-gradient(to bottom, #f8f9fa, #ffffff);
-  /* --background-gradient-dark: linear-gradient(to bottom, #1a1a1a, #2d2d2d); */
   --title-color-light: #1a237e;
   --title-color-dark: #003f72;
   --card-bg-light: white;
@@ -161,10 +160,6 @@
   transform: scale(0.95);
 }
 
-.favoritoBtn:hover .heartIcon {
-  filter: drop-shadow(0 0 2px rgba(255, 68, 68, 0.3));
-}
-
 .favorito .heartIcon {
   color: #ff4444;
   animation: heartBeat 0.3s ease-in-out;
@@ -214,6 +209,14 @@
   .loading {
     color: var(--text-color-dark);
   }
+
+  .favoritoBtn {
+    background-color: rgba(51, 51, 51, 0.9);
+  }
+  
+  .favoritoBtn:hover {
+    background-color: rgba(51, 51, 51, 1);
+  }
 }
 
 @media (max-width: 768px) {
@@ -228,5 +231,68 @@
   .concursoGrid {
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     gap: 1.5rem;
+  }
+}
+
+.buttonContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  flex-wrap: wrap;
+  margin-bottom: 2rem;
+}
+
+.buttonUf {
+  padding: 10px;
+  background: var(--card-bg-light);
+  border-radius: 12px;
+  box-shadow: 0 4px 20px var(--card-shadow-light);
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid var(--card-border-light);
+  overflow: hidden;
+  position: relative;
+  width: 43px;
+  height: 43px;
+  cursor: pointer;
+  color: var(--text-color-light);
+}
+
+.buttonUf::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: var(--gold);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.buttonUf:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 8px 30px var(--card-shadow-light);
+}
+
+.buttonUf:hover::before {
+  opacity: 1;
+}
+
+.buttonUf:hover {
+  color: var(--hover-color-light);
+}
+
+@media (prefers-color-scheme: dark) {
+  .buttonUf {
+    background: var(--card-bg-dark);
+    border-color: var(--card-border-dark);
+    box-shadow: 0 4px 20px var(--card-shadow-dark);
+    color: var(--text-color-dark);
+  }
+
+  .buttonUf:hover {
+    color: var(--hover-color-dark);
+    box-shadow: 0 8px 30px var(--card-shadow-dark);
   }
 } 
